tests/lifetime/path_borrower/path_borrower_violations.err.expected
error: at 32:5: [LT-LoanConflict] In function 'direct_write_to_borrowed_field', block 'entry': cannot write to 'x': already borrowed by 'b.p'
    |
 30 |   entry:
 31 |     b.p = &mut x;
    |     ------------ borrow of 'x' occurs here
 32 |     x = 42;
    |     ^^^^^^
 33 |     call take_box(move b);
    |
  hint: the borrow of 'b.p' is active until its last use or explicit unborrow.
error: at 49:5: [LT-LoanConflict] In function 'read_during_reborrow', block 'entry': cannot read 'b.p.*': already borrowed by 's'
    |
 47 |     b.p = &mut x;
 48 |     s = &mut b.p.*;
    |     -------------- borrow of 'b.p.*' occurs here
 49 |     y = copy b.p.*;
    |     ^^^^^^^^^^^^^^
 50 |     call sink(move s);
    |
  hint: the borrow of 's' is active until its last use or explicit unborrow.
error: at 71:5: [LT-LoanConflict] In function 'write_to_loan_after_merge', block 'merge': cannot write to 'y': already borrowed by 'b.p'
    |
 64 |   t:
 65 |     b.p = &mut y;
    |     ------------ borrow of 'y' occurs here
 66 |     goto merge
    |
    | ...
    |
 70 |   merge:
 71 |     y = 1;
    |     ^^^^^
 72 |     call take_box(move b);
    |
  hint: the borrow of 'b.p' is active until its last use or explicit unborrow.
